* Version 0.6.2 (19 November 2006)
- Made mod_suphp compatible with Apache 2.2
- Modified SmartPtr implementation (hopefully) fixing
  double free problem
- Fixed problem that caused the process to block
  when more than 4096 were written to stderr
- Implemented userdir support
- Fixed problem with PATH_INFO and PHP scripts

* Version 0.6.1 (26 November 2005)
- Changed usage of STL to gain better compatibility with old GCC versions
  (credits to Jeremy Chadwick for finding the relevant code)
- Fixed typos in mod_suphp.c (Apache 1.3)
  (credits to Johan Ekenberg for finding these typos)
- Fixed potential buffer overflow in function suphp_bucket_read() in
  src/apache2/mod_suphp.c
- Fix problems with scripts sending "Last-Modified" headers
- Extended autoconf script to look for an installation of APR
  and to use its includedir when building mod_suphp for Apache 2
- Added support for chroot() call before execution of script
	
* Version 0.6.0 (27 May 2005)
++ The development of this version was sponsored by Techno-vi - Wanix. ++
++ Thanks to the sponsor!                                              ++
- Ported suPHP to C++
- Ported build system to automake
- Added runtime configuration support
- Made writeable by group/others check optional
- Rewrote Apache 1.3.x module completely, thus now supporting all
  setid-modes with Apache 1.3 and Apache 2.0
- Added support for multiple interpreters
- Added support for runtime-configurable loglevel

* Version 0.5.2 (13 July 2004)
- Added support for UIDs/GIDs not listed in system configuration when using
  "force" or "paranoid" mode
- Fixed bug in configure script that caused autoconf to assume wrong values
- Changed behaviour for setting "REDIRECT_STATUS": Now it is only set to 
  "200" when it has not already been set by Apache
- Fixed bug causing environment variables with values ending with a '='
  sign to be unset
	
* Version 0.5.1 (24 February 2004)